<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- General UI elements -->
    <string name="app_name">Sesame</string>
    <string name="action_settings">Settings</string>
    <string name="search_title">Search</string>
    <string name="action_lock">Lock Keyring</string>
    <string name="title_activity_create_database">Create Keyring</string>
    <string name="title_activity_add_item">Add key</string>
    <string name="title_activity_change_password">Change password</string>
    <string name="title_item_detail"/>
    <string name="title_enter_password">Unlock import</string>
    <string name="action_unlock">Unlock</string>
    <string name="action_export">Export Keyring</string>
    <string name="action_import">Import Keyring</string>
    <string name="title_activity_unlock">Unlock</string>
    <string name="really_delete">Really delete?</string>
    <string name="import_database_password_message">Enter the password for the imported database.</string>
    <string name="create_database_description">Choose a password for your new Keyring. You will have to remember this to view your saved passwords in the future.</string>

    <!-- Help showcase -->
    <string name="showcase_add_title">Add keys</string>
    <string name="showcase_add_content_in_overflow">Your Keyring is empty! Tap the &quot;Add&quot;
        button to add new items to your Keyring.
\n\nYou can search the items in your Keyring by tapping the search button.
\n\nWhen you\&apos;re done, tap the lock to log out. You will have to type in your password to see
        your Keyring the next time.
    </string>
        <string name="showcase_add_content_no_overflow">Your Keyring is empty! Tap the plus button
            to add new items to your Keyring.
\n\nYou can search the items in your Keyring by tapping the search button.
\n\nWhen you\&apos;re done, tap the lock to log out. You will have to type in your password to see
            your Keyring the next time.
    </string>
    <string name="showcase_generate_title">Generate secure passwords</string>
    <string name="showcase_generate_text">Tap the &quot;Generate&quot; button to generate a secure password.
\n\nIf you don\&apos;t like the first suggestion, try tapping again. Each tap generates a password from a different set of password characters.
\n\nYou can also enter an existing password. When you\&apos;re done, tap &quot;Save&quot; to save your new item in the Keyring.</string>

    <!-- Fields -->
    <string name="username">Username</string>
    <string name="new_password">Password</string>
    <string name="new_password2">Re-enter</string>
    <string name="password">Password</string>
    <string name="domain">Domain</string>
    <string name="remarks">Remarks</string>

    <!-- Buttons -->
    <string name="add_title">Add</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="dismiss">OK</string>
    <string name="done">Done</string>
    <string name="generate_password">Generate</string>
    <string name="show_password">Show</string>
    <string name="hide_password">Hide</string>

    <!-- Progress text -->
    <string name="creating_database_progress">Creating Keyring</string>
    <string name="save_progress_saving">Saving key</string>
    <string name="delete_progress_deleting">Deleting key</string>
    <string name="changing_password_progress">Changing password</string>
    <string name="unlock_progress_unlocking">Unlocking Keyring</string>
    <string name="progress_loading">Loading</string>


    <!-- Error text -->
    <string name="error_creating_database">Error creating Keyring!</string>
    <string name="export_keys_failure_title">Error exporting keys!</string>
    <string name="import_keys_failure_title">Error importing keys!</string>
    <string name="error_deleting_item_title">Error deleting key!</string>
    <string name="error_saving_item_title">Error saving item!</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_password2_mismatch">Passwords must match</string>
    <string name="action_change_error">Unknown error</string>

</resources>
