<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CreateDatabaseActivity">

    <ScrollView
        android:id="@+id/create_database_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            style="@style/CreateUnlockFormContainer"
            android:orientation="vertical">

            <TextView
                android:id="@+id/helpText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/create_database_description"/>

            <EditText
                android:id="@+id/newPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/helpText"
                android:layout_marginTop="49dp"
                android:ems="10"
                android:hint="@string/new_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/newPassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/newPassword2"
                android:layout_marginTop="49dp"
                android:imeActionId="@+id/create"
                android:imeActionLabel="@string/done"
                android:imeOptions="actionUnspecified"
                android:ems="10"
                android:hint="@string/new_password2"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/create_database_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/newPassword2"
                android:layout_gravity="right"
                android:text="@string/create" />
        </LinearLayout>
    </ScrollView>
</merge>
